--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "AllocProfileParser"
 uuid = "88b71a7a-436b-4c57-8e93-fe6a5b6cf731"
 authors = ["Pete Vilter <7341+vilterp@users.noreply.github.com>"]
 version = "0.1.0"
+
+[deps]
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
