--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,6 @@ version = "0.1.0"
 
 [deps]
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
+ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
